--- a/src/index.css
+++ b/src/index.css
@@ -776,3 +776,22 @@ span.flatpickr-weekday,
 .simplebar-scrollbar.simplebar-visible:before {
   @apply opacity-100;
 }
+
+.progress-bar {
+  animation: progress 1s infinite linear;
+}
+
+.progress-left-right {
+    transform-origin: 0% 50%;
+}
+@keyframes progress {
+  0% {
+      transform:  translateX(0) scaleX(0);
+  }
+  40% {
+      transform:  translateX(0) scaleX(0.4);
+  }
+  100% {
+      transform:  translateX(100%) scaleX(0.5);
+  }
+}
